# NAMLoaderPlugin

./: .gitmodules  CMakeLists.txt
assets/: CMakeLists.txt
src/: CMakeLists.txt  NamEditor.cpp  NamEditor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/GUI/: CMakeLists.txt
src/GUI/components/: RotarySlider.h  RoundedRect.h  ToggleSlider.h
src/GUI/lookandfeel/: ButtonLF.h  LabelLF.h  ToggleLF.h
src/core/: NAMProcessor.cpp  NAMProcessor.h
src/impulse-response/: ImpulseResponse.cpp  ImpulseResponse.h
src/noise-gate/: NoiseGate.cpp  NoiseGate.h
src/resampler/: Resampler.h
src/rms/: meter.h
src/state/: StateManager.cpp  StateManager.h
src/tonestack/: ToneStack.cpp  ToneStack.h
